--- a/style.css
+++ b/style.css
@@ -13,13 +13,14 @@ body{
     width: 100%;
     background: linear-gradient(135deg,blue 30%,purple 60%)
 }
-.todolist{
+.todolist {
     background-color: white;
     width: 50%;
     height: 60%;
     border-radius: 40px;
     padding: 20px;
 }
+
 h1{
     font-size: 2.5em;
     font-family: 'Courier New', Courier, monospace;
@@ -32,15 +33,15 @@ h1 img{
     top: 5px;
 }
 form{
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns:1.8fr 1fr;
     width: 100%;
     background-color: rgb(241, 236, 236);
-    border-radius: 10px 40px 40px 10px;
+    border-radius: 140px;
 }
 form input{
-    width: 90%;
     font-size: 1.8em;
+    width: 100%;
     background: transparent;
     border: none;
     outline: none;
@@ -54,29 +55,76 @@ form input::placeholder{
 }
 button{
     position: relative;
+    grid-column: 2/3;
     font-size: 2em;
     background: rgb(212, 178, 29);
     color: aliceblue;
     border: none;
     border-radius: 40px;
-    padding: 15px 45px;
+    padding: 7% 0;
     cursor: pointer;
-    overflow: hidden;
+    transition: 0.25s ease-in-out;
 }
-button::before{
-    content: "Add";
-    position: absolute;
-    left: -100%;
-    top: 0;
-    padding: 15px 45px;
-    border-radius: 0;
-    background: #3452b3;
-    opacity: 0;
-    transition: 0.7s ease-in-out;
+button:hover{
+    background: rgb(165, 138, 16);
 }
-button:hover::before{
-    left: 0;
-    opacity: 1;
+
+ul{
+    margin-top: 20px;
+    height: 60%;
+    width: 100%;
+    overflow-y: auto;
+}
+ul::-webkit-scrollbar{
+    width: 12px;
+}
+ul::-webkit-scrollbar-thumb{
+    background: rgba(194, 163, 26, 0.705);
+    width: 20px;
     border-radius: 40px;
-    
+}
+ul::-webkit-scrollbar-track{
+    width: 40px;
+    background: #eee8e8;
+    border-radius: 40px;
+}
+ul li{
+    position: relative;
+    font-size: 1.5em;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 600;
+    margin-left: 40px;
+    margin-bottom: 10px;
+    width: 90%;
+}
+ul li::before{
+    content: "";
+    position: absolute;
+    left: -40px;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 1px solid;
+    background-size: cover;
+    cursor: pointer;
+}
+ul li.checked{
+    text-decoration: line-through;
+}
+ul li.checked::before{
+    background: url(icone/check.svg);
+}
+.trash{
+    width: 20px;
+    padding: 10px;
+    position: absolute;
+    bottom: -10px;
+    right: 0;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: scale 0.3s ease;
+}
+.trash:hover{
+    background: #dbd3d377;
+    scale: 1.2;
 }
